129. Se crean las clases c++ Tank y TankPlayerController - se asignan como padres de los Blueprints Tank_BP y TankPlayerController_BP respectivamente - se crea metodo en TankPlayerController para obtener id del Tank que esta poseyendo en un momento dado

--- a/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -68,8 +68,8 @@ DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 
 [MRU]
-MRUItem0=/Game/MainMenu
-MRUItem1=/Game/BattleGround
+MRUItem0=/Game/BattleGround
+MRUItem1=/Game/MainMenu
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
@@ -173,10 +173,10 @@ WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSett
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 
 [EditorStartup]
-LastLevel=/Game/MainMenu
+LastLevel=/Game/BattleGround
 
 [ModuleFileTracking]
-BattleTank.TimeStamp=2019.10.06-00.45.43
+BattleTank.TimeStamp=2019.10.12-20.53.26
 BattleTank.LastCompileMethod=Runtime
 PakFile.TimeStamp=2019.09.06-05.13.45
 PakFile.LastCompileMethod=Unknown
@@ -867,8 +867,8 @@ NewLevelDialog.LastCompileMethod=Unknown
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/MainMenuUI.MainMenuUI
-OpenAssetsAtExit=/Game/MainMenu.MainMenu:PersistentLevel.MainMenu
+OpenAssetsAtExit=/Game/ImprovedTank/Tank_BP.Tank_BP
+OpenAssetsAtExit=/Game/TankPlayerController_BP.TankPlayerController_BP
 
 [ContentBrowser]
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -1419,6 +1419,11 @@ BattleGround_C.Replication=True
 BattleGround_C.Input=True
 BattleGround_C.Actor=True
 K2Node_InputAction.Input=True
+Blueprint.ClassOptions=True
+Blueprint.BlueprintOptions=True
+Blueprint.Interfaces=True
+Blueprint.Packaging=True
+Blueprint.Thumbnail=True
 
 [DetailCategoriesAdvanced]
 GameMapsSettings.DefaultModes=True
@@ -1432,7 +1437,7 @@ RecentlyPlaced=/Script/Landscape.Landscape;/Engine/Transient.ActorFactoryLandsca
 RecentlyPlaced=/Script/Engine.LightmassImportanceVolume;/Engine/Transient.ActorFactoryBoxVolume_14
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=CompilerResultsLog
 
 [DetailPropertyExpansion]
 LightmassImportanceVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1471,22 +1476,23 @@ ContentWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Backgro
 PanelWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MainMenu
-MRUItem1=/Game/MyBattleTankGameModeBase_BP
-MRUItem2=/Game/BattleGround
-MRUItem3=/Game/MainMenuUI
-MRUItem4=/Game/TankPlayerController_BP
-MRUItem5=/Game/PlayerUI
-MRUItem6=/Game/ImprovedTank/new_tank_fbx_Body
-MRUItem7=/Game/ImprovedTank/tank_fbx_Body
-MRUItem8=/Game/Tank/tank_fbx_Body
-MRUItem9=/Game/Tank/Tank_BP
-MRUItem10=/Game/Tank/tank_fbx_Turret
-MRUItem11=/Game/Tank/tank_fbx_Track
-MRUItem12=/Game/Tank/tank_fbx_Barrel
-MRUItem13=/Game/StarterContent/Materials/M_Ground_Grass
-MRUItem14=/Game/FlatLand
-MRUItem15=/Game/Landscape
+MRUItem0=/Game/BattleGround
+MRUItem1=/Game/ImprovedTank/Tank_BP
+MRUItem2=/Game/TankPlayerController_BP
+MRUItem3=/Game/MainMenu
+MRUItem4=/Game/MyBattleTankGameModeBase_BP
+MRUItem5=/Game/MainMenuUI
+MRUItem6=/Game/PlayerUI
+MRUItem7=/Game/ImprovedTank/new_tank_fbx_Body
+MRUItem8=/Game/ImprovedTank/tank_fbx_Body
+MRUItem9=/Game/Tank/tank_fbx_Body
+MRUItem10=/Game/Tank/Tank_BP
+MRUItem11=/Game/Tank/tank_fbx_Turret
+MRUItem12=/Game/Tank/tank_fbx_Track
+MRUItem13=/Game/Tank/tank_fbx_Barrel
+MRUItem14=/Game/StarterContent/Materials/M_Ground_Grass
+MRUItem15=/Game/FlatLand
+MRUItem16=/Game/Landscape
 
 [AssetEditorToolkitTabLocation]
 /Game/FlatLand.FlatLand=0
