133. Se crea una clase AIController. - Se asigna la neva clase a los tanques del mapa a exepcion del controlado por el jugador.

--- a/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -176,7 +176,7 @@ WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 LastLevel=/Game/BattleGround
 
 [ModuleFileTracking]
-BattleTank.TimeStamp=2019.10.12-22.00.05
+BattleTank.TimeStamp=2019.10.12-23.25.24
 BattleTank.LastCompileMethod=Runtime
 PakFile.TimeStamp=2019.09.06-05.13.45
 PakFile.LastCompileMethod=Unknown
@@ -867,6 +867,7 @@ NewLevelDialog.LastCompileMethod=Unknown
 
 [AssetEditorManager]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/MyBattleTankGameModeBase_BP.MyBattleTankGameModeBase_BP
 OpenAssetsAtExit=/Game/ImprovedTank/Tank_BP.Tank_BP
 OpenAssetsAtExit=/Game/TankPlayerController_BP.TankPlayerController_BP
 
@@ -1477,10 +1478,10 @@ PanelWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Backgroun
 
 [ContentBrowserRecent]
 MRUItem0=/Game/BattleGround
-MRUItem1=/Game/ImprovedTank/Tank_BP
-MRUItem2=/Game/TankPlayerController_BP
-MRUItem3=/Game/MainMenu
-MRUItem4=/Game/MyBattleTankGameModeBase_BP
+MRUItem1=/Game/MainMenu
+MRUItem2=/Game/MyBattleTankGameModeBase_BP
+MRUItem3=/Game/ImprovedTank/Tank_BP
+MRUItem4=/Game/TankPlayerController_BP
 MRUItem5=/Game/MainMenuUI
 MRUItem6=/Game/PlayerUI
 MRUItem7=/Game/ImprovedTank/new_tank_fbx_Body
