134. se agrega codigo en AIController para que pueda identificar el tanque controlado por el jugador en el mundo

--- a/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -176,7 +176,7 @@ WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 LastLevel=/Game/BattleGround
 
 [ModuleFileTracking]
-BattleTank.TimeStamp=2019.10.12-23.25.24
+BattleTank.TimeStamp=2019.10.12-23.51.32
 BattleTank.LastCompileMethod=Runtime
 PakFile.TimeStamp=2019.09.06-05.13.45
 PakFile.LastCompileMethod=Unknown
@@ -867,7 +867,6 @@ NewLevelDialog.LastCompileMethod=Unknown
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/MyBattleTankGameModeBase_BP.MyBattleTankGameModeBase_BP
 OpenAssetsAtExit=/Game/ImprovedTank/Tank_BP.Tank_BP
 OpenAssetsAtExit=/Game/TankPlayerController_BP.TankPlayerController_BP
 
@@ -1425,6 +1424,11 @@ Blueprint.BlueprintOptions=True
 Blueprint.Interfaces=True
 Blueprint.Packaging=True
 Blueprint.Thumbnail=True
+TankAIController.TransformCommon=True
+TankAIController.AI=True
+TankAIController.Replication=True
+TankAIController.Input=True
+TankAIController.Actor=True
 
 [DetailCategoriesAdvanced]
 GameMapsSettings.DefaultModes=True
@@ -1477,9 +1481,9 @@ ContentWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Backgro
 PanelWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/BattleGround
-MRUItem1=/Game/MainMenu
-MRUItem2=/Game/MyBattleTankGameModeBase_BP
+MRUItem0=/Game/MyBattleTankGameModeBase_BP
+MRUItem1=/Game/BattleGround
+MRUItem2=/Game/MainMenu
 MRUItem3=/Game/ImprovedTank/Tank_BP
 MRUItem4=/Game/TankPlayerController_BP
 MRUItem5=/Game/MainMenuUI
