134. Se agrega metodo Tick a TankPlayerController paracomenzar la implementacion de la funcionalidad para apuntar

--- a/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -176,7 +176,7 @@ WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 LastLevel=/Game/BattleGround
 
 [ModuleFileTracking]
-BattleTank.TimeStamp=2019.10.12-23.51.32
+BattleTank.TimeStamp=2019.10.13-02.09.02
 BattleTank.LastCompileMethod=Runtime
 PakFile.TimeStamp=2019.09.06-05.13.45
 PakFile.LastCompileMethod=Unknown
@@ -864,9 +864,13 @@ SequencerWidgets.TimeStamp=2019.09.06-05.14.59
 SequencerWidgets.LastCompileMethod=Unknown
 NewLevelDialog.TimeStamp=2019.09.06-05.13.31
 NewLevelDialog.LastCompileMethod=Unknown
+LauncherServices.TimeStamp=2019.09.06-05.12.09
+LauncherServices.LastCompileMethod=Unknown
+UATHelper.TimeStamp=2019.09.06-05.15.58
+UATHelper.LastCompileMethod=Unknown
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/ImprovedTank/Tank_BP.Tank_BP
 OpenAssetsAtExit=/Game/TankPlayerController_BP.TankPlayerController_BP
 
@@ -887,7 +891,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/ImprovedTank
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
