136. se crea base del metodo que realizara el raytrace, actualizando el Vector de Colision en cada Frame

--- a/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -176,7 +176,7 @@ WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 LastLevel=/Game/BattleGround
 
 [ModuleFileTracking]
-BattleTank.TimeStamp=2019.10.13-02.09.02
+BattleTank.TimeStamp=2019.10.19-16.03.56
 BattleTank.LastCompileMethod=Runtime
 PakFile.TimeStamp=2019.09.06-05.13.45
 PakFile.LastCompileMethod=Unknown
@@ -870,7 +870,7 @@ UATHelper.TimeStamp=2019.09.06-05.15.58
 UATHelper.LastCompileMethod=Unknown
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 OpenAssetsAtExit=/Game/ImprovedTank/Tank_BP.Tank_BP
 OpenAssetsAtExit=/Game/TankPlayerController_BP.TankPlayerController_BP
 
@@ -1485,11 +1485,11 @@ ContentWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Backgro
 PanelWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MyBattleTankGameModeBase_BP
-MRUItem1=/Game/BattleGround
-MRUItem2=/Game/MainMenu
-MRUItem3=/Game/ImprovedTank/Tank_BP
-MRUItem4=/Game/TankPlayerController_BP
+MRUItem0=/Game/TankPlayerController_BP
+MRUItem1=/Game/ImprovedTank/Tank_BP
+MRUItem2=/Game/MyBattleTankGameModeBase_BP
+MRUItem3=/Game/BattleGround
+MRUItem4=/Game/MainMenu
 MRUItem5=/Game/MainMenuUI
 MRUItem6=/Game/PlayerUI
 MRUItem7=/Game/ImprovedTank/new_tank_fbx_Body
