140. - Se obtiene posicion donde coliciona el RayTrace que va desde la camara a traves del crosshair hasta el primer objeto visible en el mundo - Se delega Vector al tanque que se esta poseyendo - Los AI de los tanques enemigos le delegan posicion del jugador al tanque que poseen

--- a/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -176,7 +176,7 @@ WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 LastLevel=/Game/BattleGround
 
 [ModuleFileTracking]
-BattleTank.TimeStamp=2019.10.19-17.48.28
+BattleTank.TimeStamp=2019.10.20-00.56.45
 BattleTank.LastCompileMethod=Runtime
 PakFile.TimeStamp=2019.09.06-05.13.45
 PakFile.LastCompileMethod=Unknown
@@ -868,6 +868,10 @@ LauncherServices.TimeStamp=2019.09.06-05.12.09
 LauncherServices.LastCompileMethod=Unknown
 UATHelper.TimeStamp=2019.09.06-05.15.58
 UATHelper.LastCompileMethod=Unknown
+BlueprintNativeCodeGen.TimeStamp=2019.09.06-05.07.56
+BlueprintNativeCodeGen.LastCompileMethod=Unknown
+BlueprintCompilerCppBackend.TimeStamp=2019.09.06-05.07.49
+BlueprintCompilerCppBackend.LastCompileMethod=Unknown
 
 [AssetEditorManager]
 CleanShutdown=False
@@ -892,7 +896,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/ImprovedTank
+ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
