142. Se obtiene referencia del Barrel del Tanque, a partir de un metodo BlueprintCallable, por el cual le pasamos la referencia del barrel desde Tank_BP, a la Clase Tank y luego a la clase TankAimingComponent

--- a/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -67,11 +67,14 @@ LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 
+[MRU]
+MRUItem0=/Game/BattleGround
+
 [EditorStartup]
 LastLevel=/Game/BattleGround
 
 [ModuleFileTracking]
-BattleTank.TimeStamp=2019.10.20-17.14.22
+BattleTank.TimeStamp=2019.10.20-17.40.42
 BattleTank.LastCompileMethod=Runtime
 
 [AssetEditorManager]
@@ -89,5 +92,12 @@ Tank_BP_C.Rendering=True
 Tank_BP_C.Replication=True
 Tank_BP_C.Input=True
 Tank_BP_C.Actor=True
+ObjectProperty.Variable=True
+ObjectProperty.Events=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.Events=True
+
+[MessageLog]
+LastLogListing=CompilerResultsLog
 
 
