144. Se prepara la direccion a la que realmente apuntara el Barrel

--- a/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -74,15 +74,17 @@ MRUItem0=/Game/BattleGround
 LastLevel=/Game/BattleGround
 
 [ModuleFileTracking]
-BattleTank.TimeStamp=2019.10.20-17.40.42
+BattleTank.TimeStamp=2019.10.20-18.50.02
 BattleTank.LastCompileMethod=Runtime
 
 [AssetEditorManager]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/ImprovedTank/Tank_BP.Tank_BP
+OpenAssetsAtExit=/Game/ImprovedTank/new_tank_fbx_Barrel.new_tank_fbx_Barrel
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ImprovedTank/Tank_BP
+MRUItem0=/Game/ImprovedTank/new_tank_fbx_Barrel
+MRUItem1=/Game/ImprovedTank/Tank_BP
 
 [DetailCategories]
 Tank_BP_C.Tick=True
@@ -96,6 +98,31 @@ ObjectProperty.Variable=True
 ObjectProperty.Events=True
 K2Node_VariableGet.Variable=True
 K2Node_VariableGet.Events=True
+StaticMeshComponent.Variable=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.Sockets=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.Materials=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.VirtualTexture=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Cooking=True
+StaticMeshComponent.Events=True
+Tank_BP_C.Firing=True
+StaticMesh.StaticMeshMaterials=True
+StaticMesh.LODCustomMode=True
+StaticMesh.LOD0=True
+StaticMesh.LodSettings=True
+StaticMesh.StaticMesh=True
+StaticMesh.Collision=True
+StaticMesh.ImportSettings=True
+StaticMesh.EditableMesh=True
+StaticMesh.Navigation=True
+StaticMeshSocket.StaticMeshSocket=True
 
 [MessageLog]
 LastLogListing=CompilerResultsLog
