148. se hace que TankBarrel sea reconocido como component en el blueprint para reemplazar el otro Barrel StaticMesh

--- a/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -113,7 +113,7 @@ MRUItem0=/Game/BattleGround
 LastLevel=/Game/BattleGround
 
 [ModuleFileTracking]
-BattleTank.TimeStamp=2019.10.20-23.09.39
+BattleTank.TimeStamp=2019.10.20-23.44.12
 BattleTank.LastCompileMethod=Runtime
 PakFile.TimeStamp=2019.09.06-05.13.45
 PakFile.LastCompileMethod=Unknown
@@ -791,6 +791,10 @@ MovieSceneCapture.TimeStamp=2019.09.06-05.13.11
 MovieSceneCapture.LastCompileMethod=Unknown
 StaticMeshEditor.TimeStamp=2019.09.06-05.15.36
 StaticMeshEditor.LastCompileMethod=Unknown
+MeshBuilder.TimeStamp=2019.09.06-05.12.44
+MeshBuilder.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2019.09.06-05.11.38
+HierarchicalLODUtilities.LastCompileMethod=Unknown
 
 [AssetEditorManager]
 CleanShutdown=False
@@ -837,6 +841,24 @@ StaticMesh.ImportSettings=True
 StaticMesh.EditableMesh=True
 StaticMesh.Navigation=True
 StaticMeshSocket.StaticMeshSocket=True
+TankBarrel.Variable=True
+TankBarrel.TransformCommon=True
+TankBarrel.Sockets=True
+TankBarrel.StaticMesh=True
+TankBarrel.TankBarrel=True
+TankBarrel.Physics=True
+TankBarrel.Collision=True
+TankBarrel.Lighting=True
+TankBarrel.Rendering=True
+TankBarrel.VirtualTexture=True
+TankBarrel.Tags=True
+TankBarrel.ComponentReplication=True
+TankBarrel.Cooking=True
+TankBarrel.Events=True
+TankBarrel.Materials=True
+ObjectProperty.DefaultValueCategory=True
+K2Node_VariableGet.DefaultValueCategory=True
+TankBarrel.Setup=True
 
 [MessageLog]
 LastLogListing=BlueprintLog
@@ -879,7 +901,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=
+ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -887,6 +909,8 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
+AssetPropertyPicker.ThumbnailSizeScale=0.100000
+AssetPropertyPicker.CurrentViewType=0
 
 [Directories2]
 UNR=D:/Proyectos UE4/BattleTank/BattleTank/Content
