149. Se evita que Tank realice Tick, porque no lo necesita

--- a/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -113,7 +113,7 @@ MRUItem0=/Game/BattleGround
 LastLevel=/Game/BattleGround
 
 [ModuleFileTracking]
-BattleTank.TimeStamp=2019.10.20-23.44.12
+BattleTank.TimeStamp=2019.10.26-17.03.19
 BattleTank.LastCompileMethod=Runtime
 PakFile.TimeStamp=2019.09.06-05.13.45
 PakFile.LastCompileMethod=Unknown
@@ -859,9 +859,45 @@ TankBarrel.Materials=True
 ObjectProperty.DefaultValueCategory=True
 K2Node_VariableGet.DefaultValueCategory=True
 TankBarrel.Setup=True
+Landscape.TransformCommon=True
+Landscape.Information=True
+Landscape.LOD=True
+Landscape.LOD Distribution=True
+Landscape.Tessellation=True
+Landscape.Lighting=True
+Landscape.Landscape=True
+Landscape.VirtualTexture=True
+Landscape.Rendering=True
+Landscape.Lightmass=True
+Landscape.Collision=True
+Landscape.HierarchicalLOD=True
+Landscape.Replication=True
+Landscape.Input=True
+Landscape.Actor=True
+CameraComponent.Variable=True
+CameraComponent.TransformCommon=True
+CameraComponent.Sockets=True
+CameraComponent.CameraSettings=True
+CameraComponent.CameraOptions=True
+CameraComponent.StaticMesh=True
+CameraComponent.PostProcess=True
+CameraComponent.Tags=True
+CameraComponent.ComponentReplication=True
+CameraComponent.Activation=True
+CameraComponent.Cooking=True
+CameraComponent.Events=True
+SceneComponent.Variable=True
+SceneComponent.TransformCommon=True
+SceneComponent.Sockets=True
+SceneComponent.Rendering=True
+SceneComponent.Tags=True
+SceneComponent.ComponentReplication=True
+SceneComponent.Activation=True
+SceneComponent.Cooking=True
+SceneComponent.Events=True
 
 [MessageLog]
-LastLogListing=BlueprintLog
+LastLogListing=CompilerResultsLog
 
 [AssetEditorToolkitTabLocation]
 /Game/ImprovedTank/new_tank_fbx_Barrel.new_tank_fbx_Barrel=0
