151. - Se logra mover como tal el Barrel 152. - Se crea nueva clase TankTurret, se define la clase como BlueprintSpaunableComponent - Se agrega a Tank_BP - Se reemplaza por la vieja StaticMeshComponent Turret - en la clase Tank, se define el metodo SetTurretReference y se ace BlueprintCallable - en la clase TankAiminComponent, se crea metodo SetTurretReference y referencia UTankTurret - en Tank_BP se enlaza Nodo Set Barrel Reference al Nodo Set Turret Reference y recibe como parameto INPUT Tank Turret

--- a/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -113,7 +113,7 @@ MRUItem0=/Game/BattleGround
 LastLevel=/Game/BattleGround
 
 [ModuleFileTracking]
-BattleTank.TimeStamp=2019.10.26-17.33.42
+BattleTank.TimeStamp=2019.10.26-20.24.09
 BattleTank.LastCompileMethod=Runtime
 PakFile.TimeStamp=2019.09.06-05.13.45
 PakFile.LastCompileMethod=Unknown
@@ -801,8 +801,8 @@ CleanShutdown=False
 OpenAssetsAtExit=/Game/ImprovedTank/Tank_BP.Tank_BP
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ImprovedTank/Tank_BP
-MRUItem1=/Game/ImprovedTank/new_tank_fbx_Barrel
+MRUItem0=/Game/ImprovedTank/new_tank_fbx_Barrel
+MRUItem1=/Game/ImprovedTank/Tank_BP
 
 [DetailCategories]
 Tank_BP_C.Tick=True
@@ -895,6 +895,32 @@ SceneComponent.ComponentReplication=True
 SceneComponent.Activation=True
 SceneComponent.Cooking=True
 SceneComponent.Events=True
+TankTurret.Variable=True
+TankTurret.TransformCommon=True
+TankTurret.Sockets=True
+TankTurret.StaticMesh=True
+TankTurret.Lighting=True
+TankTurret.Rendering=True
+TankTurret.Physics=True
+TankTurret.VirtualTexture=True
+TankTurret.Tags=True
+TankTurret.ComponentReplication=True
+TankTurret.Cooking=True
+TankTurret.Events=True
+TankTurret.Materials=True
+SpringArmComponent.Variable=True
+SpringArmComponent.TransformCommon=True
+SpringArmComponent.Sockets=True
+SpringArmComponent.Camera=True
+SpringArmComponent.CameraCollision=True
+SpringArmComponent.CameraSettings=True
+SpringArmComponent.Lag=True
+SpringArmComponent.Rendering=True
+SpringArmComponent.Tags=True
+SpringArmComponent.ComponentReplication=True
+SpringArmComponent.Activation=True
+SpringArmComponent.Cooking=True
+SpringArmComponent.Events=True
 
 [MessageLog]
 LastLogListing=CompilerResultsLog
