153. - En la clase TankTurret, se crea metodo Rotate, muy similar a Elevate de Barrel pero sin limites de rotacion - En TankAimingComponent, en el metodo MoveBarrelTowards, donde se asigna el DeltaRotator.Pitch a Elevate se asigna ahora DeltaRotator.Yaw a Rotate

--- a/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -113,7 +113,7 @@ MRUItem0=/Game/BattleGround
 LastLevel=/Game/BattleGround
 
 [ModuleFileTracking]
-BattleTank.TimeStamp=2019.10.26-20.24.09
+BattleTank.TimeStamp=2019.10.26-21.11.49
 BattleTank.LastCompileMethod=Runtime
 PakFile.TimeStamp=2019.09.06-05.13.45
 PakFile.LastCompileMethod=Unknown
@@ -801,8 +801,10 @@ CleanShutdown=False
 OpenAssetsAtExit=/Game/ImprovedTank/Tank_BP.Tank_BP
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ImprovedTank/new_tank_fbx_Barrel
-MRUItem1=/Game/ImprovedTank/Tank_BP
+MRUItem0=/Game/ImprovedTank/new_tank_fbx_Body
+MRUItem1=/Game/ImprovedTank/new_tank_fbx_Barrel
+MRUItem2=/Game/ImprovedTank/new_tank_fbx_Turret
+MRUItem3=/Game/ImprovedTank/Tank_BP
 
 [DetailCategories]
 Tank_BP_C.Tick=True
@@ -921,6 +923,8 @@ SpringArmComponent.ComponentReplication=True
 SpringArmComponent.Activation=True
 SpringArmComponent.Cooking=True
 SpringArmComponent.Events=True
+TankTurret.Setup=True
+TankTurret.Collision=True
 
 [MessageLog]
 LastLogListing=CompilerResultsLog
@@ -928,6 +932,8 @@ LastLogListing=CompilerResultsLog
 [AssetEditorToolkitTabLocation]
 /Game/ImprovedTank/new_tank_fbx_Barrel.new_tank_fbx_Barrel=0
 /Game/ImprovedTank/Tank_BP.Tank_BP=0
+/Game/ImprovedTank/new_tank_fbx_Turret.new_tank_fbx_Turret=0
+/Game/ImprovedTank/new_tank_fbx_Body.new_tank_fbx_Body=1
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
