159. Se implementa funcionalidad para disparar. 160. Se permite que la AI dispare tambien Se establece un tiempo de espera para volver a disparar en la clase Tank

--- a/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -67,35 +67,27 @@ LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 
+[MRU]
+MRUItem0=/Game/BattleGround
+
 [EditorStartup]
 LastLevel=/Game/BattleGround
 
 [ModuleFileTracking]
-BattleTank.TimeStamp=2019.10.27-23.33.19
+BattleTank.TimeStamp=2019.11.02-17.31.49
 BattleTank.LastCompileMethod=Runtime
 
 [AssetEditorManager]
 CleanShutdown=False
 
-[ContentBrowserRecent]
-MRUItem0=/Game/ImprovedTank/new_tank_fbx_Barrel
-
 [DetailCategories]
-StaticMesh.StaticMeshMaterials=True
-StaticMesh.LODCustomMode=True
-StaticMesh.LOD0=True
-StaticMesh.LodSettings=True
-StaticMesh.StaticMesh=True
-StaticMesh.Collision=True
-StaticMesh.ImportSettings=True
-StaticMesh.EditableMesh=True
-StaticMesh.Navigation=True
-StaticMeshSocket.StaticMeshSocket=True
-
-[AssetEditorToolkitTabLocation]
-/Game/ImprovedTank/new_tank_fbx_Barrel.new_tank_fbx_Barrel=1
-
-[MessageLog]
-LastLogListing=CompilerResultsLog
+Tank_BP_C.TransformCommon=True
+Tank_BP_C.Firing=True
+Tank_BP_C.Pawn=True
+Tank_BP_C.Camera=True
+Tank_BP_C.Rendering=True
+Tank_BP_C.Replication=True
+Tank_BP_C.Input=True
+Tank_BP_C.Actor=True
 
 
