170. se agrega funcionalidad para girar izq y der

--- a/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -114,7 +114,7 @@ MRUItem1=/Game/MainMenu
 LastLevel=/Game/BattleGround
 
 [ModuleFileTracking]
-BattleTank.TimeStamp=2019.11.03-23.44.39
+BattleTank.TimeStamp=2019.11.10-01.06.56
 BattleTank.LastCompileMethod=Runtime
 PakFile.TimeStamp=2019.10.27-04.29.22
 PakFile.LastCompileMethod=Unknown
@@ -790,6 +790,8 @@ Voice.TimeStamp=2019.10.27-04.31.36
 Voice.LastCompileMethod=Unknown
 MovieSceneCapture.TimeStamp=2019.10.27-04.28.46
 MovieSceneCapture.LastCompileMethod=Unknown
+ExternalImagePicker.TimeStamp=2019.10.27-04.27.21
+ExternalImagePicker.LastCompileMethod=Unknown
 
 [AssetEditorManager]
 CleanShutdown=False
@@ -1088,6 +1090,24 @@ Landscape.HierarchicalLOD=True
 Landscape.Replication=True
 Landscape.Input=True
 Landscape.Actor=True
+K2Node_GetInputAxisValue.Input=True
+LightmassImportanceVolume.TransformCommon=True
+LightmassImportanceVolume.Replication=True
+LightmassImportanceVolume.BrushSettings=True
+LightmassImportanceVolume.Actor=True
+LandscapeEditorObject.LandscapeEditor=True
+LandscapeEditorObject.Tool Settings=True
+LandscapeEditorObject.Brush Settings=True
+LandscapeEditorObject.Target Layers=True
+NavMeshBoundsVolume.TransformCommon=True
+NavMeshBoundsVolume.Navigation=True
+NavMeshBoundsVolume.Collision=True
+NavMeshBoundsVolume.VirtualTexture=True
+NavMeshBoundsVolume.Tags=True
+NavMeshBoundsVolume.Cooking=True
+NavMeshBoundsVolume.BrushSettings=True
+NavMeshBoundsVolume.Replication=True
+NavMeshBoundsVolume.Actor=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=165.000
@@ -1229,5 +1249,42 @@ PaperRuntimeSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.
 TcpMessagingSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.Left Track Throttle Backward,InputSettings.Bindings.AxisMappings.Right Track Throttle Backward,InputSettings.Bindings.AxisMappings.Right Track Throttle Forward,InputSettings.Bindings.AxisMappings.Left Track Throttle Forward,
 UdpMessagingSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.Left Track Throttle Backward,InputSettings.Bindings.AxisMappings.Right Track Throttle Backward,InputSettings.Bindings.AxisMappings.Right Track Throttle Forward,InputSettings.Bindings.AxisMappings.Left Track Throttle Forward,
 WmfMediaSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.Left Track Throttle Backward,InputSettings.Bindings.AxisMappings.Right Track Throttle Backward,InputSettings.Bindings.AxisMappings.Right Track Throttle Forward,InputSettings.Bindings.AxisMappings.Left Track Throttle Forward,
+LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
+
+[LightingBuildOptions]
+OnlyBuildSelected=False
+OnlyBuildSelectedLevels=False
+OnlyBuildVisibility=False
+
+[LandscapeEdit]
+BrushRadius=639.395203
+AlphaBrushAutoRotate=True
+WorldSpacePatternBrushSettings.Origin=X=0.000 Y=0.000
+WorldSpacePatternBrushSettings.bCenterTextureOnOrigin=False
+WorldSpacePatternBrushSettings.RepeatSize=3200.000000
+bUseFlattenTarget=False
+FlattenTarget=0.000000
+TerraceSmooth=0.000100
+TerraceInterval=1.000000
+RampWidth=2000.000000
+RampSideFalloff=0.400000
+bCombinedLayersOperation=True
+SmoothFilterKernelSize=4
+MirrorOp=0
+NewLandscapeMaterialName=
+ImportLandscape_AlphamapType=0
+ShowUnusedLayers=True
+
+[DetailCategoriesAdvanced]
+EditorProjectAppearanceSettings.Units=True
+
+[DetailPropertyExpansion]
+LightmassImportanceVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+
+[PlacementMode]
+RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
 
 
