172. Se agrega funcionalidad para que los tanques enemigos se muevan hacia atras y adelante, usando Dot Prodcut entre el vector direccion actual y direccion hacia objetivo

--- a/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -71,7 +71,7 @@ PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 LastLevel=/Game/BattleGround
 
 [ModuleFileTracking]
-BattleTank.TimeStamp=2019.11.10-02.15.52
+BattleTank.TimeStamp=2019.11.10-19.40.16
 BattleTank.LastCompileMethod=Runtime
 PakFile.TimeStamp=2019.10.27-04.29.22
 PakFile.LastCompileMethod=Unknown
@@ -749,7 +749,7 @@ MovieSceneCapture.TimeStamp=2019.10.27-04.28.46
 MovieSceneCapture.LastCompileMethod=Unknown
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -800,6 +800,49 @@ PlayerStart.Rendering=True
 PlayerStart.Replication=True
 PlayerStart.Input=True
 PlayerStart.Actor=True
+Landscape.TransformCommon=True
+Landscape.Information=True
+Landscape.LOD=True
+Landscape.LOD Distribution=True
+Landscape.Tessellation=True
+Landscape.Lighting=True
+Landscape.Landscape=True
+Landscape.VirtualTexture=True
+Landscape.Rendering=True
+Landscape.Lightmass=True
+Landscape.Collision=True
+Landscape.HierarchicalLOD=True
+Landscape.Replication=True
+Landscape.Input=True
+Landscape.Actor=True
+Tank_BP_C.TransformCommon=True
+Tank_BP_C.Firing=True
+Tank_BP_C.Pawn=True
+Tank_BP_C.Camera=True
+Tank_BP_C.Rendering=True
+Tank_BP_C.Replication=True
+Tank_BP_C.Input=True
+Tank_BP_C.Actor=True
+NavMeshBoundsVolume.TransformCommon=True
+NavMeshBoundsVolume.Navigation=True
+NavMeshBoundsVolume.Collision=True
+NavMeshBoundsVolume.VirtualTexture=True
+NavMeshBoundsVolume.Tags=True
+NavMeshBoundsVolume.Cooking=True
+NavMeshBoundsVolume.BrushSettings=True
+NavMeshBoundsVolume.Replication=True
+NavMeshBoundsVolume.Actor=True
+RecastNavMesh.Display=True
+RecastNavMesh.Generation=True
+RecastNavMesh.Query=True
+RecastNavMesh.Runtime=True
+SphereReflectionCapture.TransformCommon=True
+SphereReflectionCapture.ReflectionCapture=True
+SphereReflectionCapture.Rendering=True
+SphereReflectionCapture.Tags=True
+SphereReflectionCapture.Cooking=True
+SphereReflectionCapture.Replication=True
+SphereReflectionCapture.Input=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=165.000
@@ -854,5 +897,18 @@ MeshImportExport=D:/Proyectos UE4/BattleTank/BattleTank/Content/
 WorldRoot=D:/Proyectos UE4/BattleTank/BattleTank/Content/
 Level=D:/Proyectos UE4/BattleTank/BattleTank/Content/
 Project=C:/Program Files/Epic Games/UE_4.23/
+
+[LightingBuildOptions]
+OnlyBuildSelected=False
+OnlyBuildSelectedLevels=False
+OnlyBuildVisibility=False
+
+[MessageLog]
+LastLogListing=CompilerResultsLog
+
+[DetailPropertyExpansion]
+NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 
