--- a/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -71,7 +71,7 @@ PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 LastLevel=/Game/BattleGround
 
 [ModuleFileTracking]
-BattleTank.TimeStamp=2019.11.10-19.40.16
+BattleTank.TimeStamp=2019.11.10-20.33.09
 BattleTank.LastCompileMethod=Runtime
 PakFile.TimeStamp=2019.10.27-04.29.22
 PakFile.LastCompileMethod=Unknown
@@ -910,5 +910,8 @@ LastLogListing=CompilerResultsLog
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+
+[PlacementMode]
+RecentlyPlaced=/Game/ImprovedTank/Tank_BP.Tank_BP;
 
 
