176. se crea Enumerador para identificar el estado del componente TankAimingComponent

--- a/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -59,8 +59,8 @@ ClientWindowHeight=480
 ServerMapNameOverride=
 AdditionalServerGameOptions=
 AdditionalLaunchOptions=
-MultipleInstanceLastHeight=0
-MultipleInstanceLastWidth=0
+MultipleInstanceLastHeight=720
+MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@DESKTOP-KHEA3GT
 LastExecutedLaunchName=DESKTOP-KHEA3GT
 LastExecutedPIEPreviewDevice=
@@ -83,8 +83,8 @@ Advanced=False
 LastLevel=/Game/BattleGround
 
 [ModuleFileTracking]
-BattleTank.TimeStamp=2019.11.10-21.35.28
-BattleTank.LastCompileMethod=Runtime
+BattleTank.TimeStamp=2019.11.10-23.06.47
+BattleTank.LastCompileMethod=External
 
 [AssetEditorManager]
 CleanShutdown=False
@@ -203,5 +203,27 @@ Image.Clipping=True
 Image.Navigation=True
 Image.Localization=True
 Image.Events=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
+K2Node_FunctionResult.Graph=True
+K2Node_FunctionResult.Inputs=True
+K2Node_FunctionResult.Outputs=True
+K2Node_VariableGet.DefaultValueCategory=True
+
+[/Script/UnrealEd.EditorLoadingSavingSettings]
+AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
+bForceCompilationAtStartup=False
+bRestoreOpenAssetTabsOnRestart=False
+bEnableSourceControlCompatabilityCheck=False
+bMonitorContentDirectories=True
+AutoReimportThreshold=3.000000
+bAutoCreateAssets=True
+bAutoDeleteAssets=True
+bDetectChangesOnStartup=True
+bPromptBeforeAutoImporting=True
+bDeleteSourceFilesWithAssets=False
+bAutomaticallyCheckoutOnAssetModification=False
+bSCCUseGlobalSettings=False
 
 
