--- a/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -59,13 +59,16 @@ ClientWindowHeight=480
 ServerMapNameOverride=
 AdditionalServerGameOptions=
 AdditionalLaunchOptions=
-MultipleInstanceLastHeight=0
-MultipleInstanceLastWidth=0
+MultipleInstanceLastHeight=720
+MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@DESKTOP-KHEA3GT
 LastExecutedLaunchName=DESKTOP-KHEA3GT
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
+
+[MRU]
+MRUItem0=/Game/BattleGround
 
 [WidgetTemplatesExpanded]
 Editor=False
@@ -83,12 +86,13 @@ Advanced=False
 LastLevel=/Game/BattleGround
 
 [ModuleFileTracking]
-BattleTank.TimeStamp=2019.11.16-17.36.08
-BattleTank.LastCompileMethod=Unknown
+BattleTank.TimeStamp=2019.11.16-18.44.33
+BattleTank.LastCompileMethod=Runtime
 
 [AssetEditorManager]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/PlayerUI.PlayerUI
+OpenAssetsAtExit=/Game/ImprovedTank/Tank_BP.Tank_BP
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -147,7 +151,8 @@ bShowOutlinerInfoColumn=True
 FrameNumberDisplayFormat=Seconds
 
 [ContentBrowserRecent]
-MRUItem0=/Game/PlayerUI
+MRUItem0=/Game/ImprovedTank/Tank_BP
+MRUItem1=/Game/PlayerUI
 
 [DetailCategories]
 PlayerUI_C.Appearance=True
@@ -162,5 +167,256 @@ PlayerUI_C.Accessibility=True
 PlayerUI_C.Clipping=True
 PlayerUI_C.Navigation=True
 PlayerUI_C.Localization=True
+Landscape.TransformCommon=True
+Landscape.LOD=True
+Landscape.LOD Distribution=True
+Landscape.Tessellation=True
+Landscape.Lighting=True
+Landscape.Landscape=True
+Landscape.VirtualTexture=True
+Landscape.Rendering=True
+Landscape.Lightmass=True
+Landscape.Collision=True
+Landscape.HierarchicalLOD=True
+Landscape.Replication=True
+Landscape.Input=True
+Landscape.Actor=True
+Tank_BP_C.TransformCommon=True
+Tank_BP_C.Firing=True
+Tank_BP_C.Pawn=True
+Tank_BP_C.Camera=True
+Tank_BP_C.Rendering=True
+Tank_BP_C.Replication=True
+Tank_BP_C.Input=True
+Tank_BP_C.Actor=True
+CryptoKeysSettings.Encryption=True
+CryptoKeysSettings.Signing=True
+GeneralProjectSettings.About=True
+GeneralProjectSettings.Publisher=True
+GeneralProjectSettings.Legal=True
+GeneralProjectSettings.Displayed=True
+GeneralProjectSettings.Settings=True
+GameplayTagsSettings.GameplayTags=True
+GameplayTagsSettings.Advanced Replication=True
+GameMapsSettings.DefaultModes=True
+GameMapsSettings.DefaultMaps=True
+GameMapsSettings.LocalMultiplayer=True
+GameMapsSettings.GameInstance=True
+MoviePlayerSettings.Movies=True
+ProjectPackagingSettings.Packaging=True
+ProjectPackagingSettings.Project=True
+ProjectPackagingSettings.Blueprints=True
+ProjectPackagingSettings.Prerequisites=True
+HardwareTargetingSettings.Target Hardware=True
+HardwareTargetingSettings.Pending Changes=True
+AssetManagerSettings.Asset Manager=True
+AssetManagerSettings.Redirects=True
+AssetToolsSettings.Asset Tools=True
+AISystem.AISystem=True
+AISystem.Movement=True
+AISystem.Gameplay Tasks=True
+AISystem.EQS=True
+AISystem.PerceptionSystem=True
+AnimationSettings.Compression=True
+AnimationSettings.Performance=True
+AudioSettings.Dialogue=True
+AudioSettings.Audio=True
+AudioSettings.Quality=True
+ChaosSolverSettings.GameInstance=True
+CollisionProfile.Object Channels=True
+CollisionProfile.Trace Channels=True
+ConsoleSettings.General=True
+ConsoleSettings.AutoComplete=True
+ConsoleSettings.Colors=True
+CookerSettings.Cooker=True
+CookerSettings.Textures=True
+CookerSettings.Editor=True
+CrowdManager.Config=True
+DebugCameraControllerSettings.General=True
+GameplayDebuggerConfig.Input=True
+GameplayDebuggerConfig.Display=True
+GameplayDebuggerConfig.AddOns=True
+GarbageCollectionSettings.General=True
+GarbageCollectionSettings.Optimization=True
+Engine.Fonts=True
+Engine.DefaultClasses=True
+Engine.DefaultMaterials=True
+Engine.Settings=True
+Engine.Subtitles=True
+Engine.Blueprints=True
+Engine.Anim Blueprints=True
+Engine.Screenshots=True
+Engine.Framerate=True
+Engine.Timecode=True
+HierarchicalLODSettings.HLODSystem=True
+InputSettings.Bindings=True
+InputSettings.ViewportProperties=True
+InputSettings.Mobile=True
+InputSettings.Virtual Keyboard (Mobile)=True
+InputSettings.Console=True
+RecastNavMesh.Display=True
+RecastNavMesh.Generation=True
+RecastNavMesh.Query=True
+RecastNavMesh.Runtime=True
+RecastNavMesh.Tick=True
+NavigationSystemV1.Navigation=True
+NavigationSystemV1.NavigationSystem=True
+NavigationSystemV1.Navigation Enforcing=True
+NavigationSystemV1.Agents=True
+NetworkSettings.libcurl=True
+NetworkSettings.World=True
+NetworkSettings.replication=True
+PhysicsSettings.Constants=True
+PhysicsSettings.Simulation=True
+PhysicsSettings.Replication=True
+PhysicsSettings.Optimization=True
+PhysicsSettings.Framerate=True
+PhysicsSettings.Broadphase=True
+PhysicsSettings.ChaosPhysics=True
+PhysicsSettings.Physical Surface=True
+RendererSettings.Mobile=True
+RendererSettings.Materials=True
+RendererSettings.Culling=True
+RendererSettings.Textures=True
+RendererSettings.VirtualTextures=True
+RendererSettings.Reflections=True
+RendererSettings.ForwardRenderer=True
+RendererSettings.Lighting=True
+RendererSettings.Tessellation=True
+RendererSettings.Translucency=True
+RendererSettings.Postprocessing=True
+RendererSettings.DefaultSettings=True
+RendererSettings.Optimizations=True
+RendererSettings.Debugging=True
+RendererSettings.VR=True
+RendererSettings.Experimental=True
+RendererSettings.Editor=True
+RendererSettings.RayTracing=True
+RendererSettings.ShaderPermutationReduction=True
+RendererSettings.MobileShaderPermutationReduction=True
+RendererOverrideSettings.ShaderPermutationReduction=True
+RendererOverrideSettings.Miscellaneous=True
+SlateSettings.ConstraintCanvas=True
+StreamingSettings.PackageStreaming=True
+StreamingSettings.LevelStreaming=True
+TutorialSettings.Tutorials=True
+UserInterfaceSettings.Focus=True
+UserInterfaceSettings.Hardware Cursors=True
+UserInterfaceSettings.Software Cursors=True
+UserInterfaceSettings.DPI Scaling=True
+UserInterfaceSettings.Widgets=True
+LevelEditor2DSettings.General=True
+LevelEditor2DSettings.LayerSnapping=True
+EditorProjectAppearanceSettings.Units=True
+BlueprintEditorProjectSettings.Blueprints=True
+BlueprintEditorProjectSettings.Actors=True
+ClassViewerProjectSettings.ClassVisibilityManagement=True
+ProxyLODMeshSimplificationSettings.General=True
+MovieSceneToolsProjectSettings.Timeline=True
+MovieSceneToolsProjectSettings.Shots=True
+MovieSceneToolsProjectSettings.TrackSettings=True
+MeshSimplificationSettings.General=True
+PaperImporterSettings.NewAssetSettings=True
+PaperImporterSettings.ImportSettings=True
+PaperImporterSettings.MaterialSettings=True
+SkeletalMeshSimplificationSettings.General=True
+StructViewerProjectSettings.StructVisibilityManagement=True
+TextureImportSettings.VirtualTextures=True
+UMGEditorProjectSettings.Compiler=True
+UMGEditorProjectSettings.Class Filtering=True
+UMGEditorProjectSettings.Designer=True
+AndroidRuntimeSettings.APK Packaging=True
+AndroidRuntimeSettings.Build=True
+AndroidRuntimeSettings.Advanced APK Packaging=True
+AndroidRuntimeSettings.DistributionSigning=True
+AndroidRuntimeSettings.GooglePlayServices=True
+AndroidRuntimeSettings.Icons=True
+AndroidRuntimeSettings.LaunchImages=True
+AndroidRuntimeSettings.Input=True
+AndroidRuntimeSettings.DaydreamAppTile=True
+AndroidRuntimeSettings.GraphicsDebugger=True
+AndroidRuntimeSettings.Audio=True
+AndroidRuntimeSettings.MultiTextureFormats=True
+AndroidRuntimeSettings.TextureFormatPriorities=True
+ShaderPlatformQualitySettings.Forward Rendering Overrides=True
+AndroidSDKSettings.SDKConfig=True
+HTML5TargetSettings.HTML5 as a UE4 Platform Note:=True
+HTML5TargetSettings.Emscripten=True
+HTML5TargetSettings.Canvas=True
+HTML5TargetSettings.Audio=True
+HTML5TargetSettings.Packaging=True
+HTML5TargetSettings.Launch=True
+HTML5TargetSettings.Amazon_S3=True
+IOSRuntimeSettings.Mobile Provision=True
+IOSRuntimeSettings.BundleInformation=True
+IOSRuntimeSettings.Orientation=True
+IOSRuntimeSettings.Input=True
+IOSRuntimeSettings.FileSystem=True
+IOSRuntimeSettings.Rendering=True
+IOSRuntimeSettings.OS Info=True
+IOSRuntimeSettings.PowerUsage=True
+IOSRuntimeSettings.Devices=True
+IOSRuntimeSettings.Build=True
+IOSRuntimeSettings.Online=True
+IOSRuntimeSettings.Extra PList Data=True
+IOSRuntimeSettings.Required Icons=True
+IOSRuntimeSettings.Optional Icons=True
+IOSRuntimeSettings.Launch Images=True
+IOSRuntimeSettings.Audio=True
+LinuxTargetSettings.Targeted RHIs=True
+LinuxTargetSettings.Splash=True
+LinuxTargetSettings.Icon=True
+LinuxTargetSettings.Audio=True
+MacTargetSettings.Targeted RHIs=True
+MacTargetSettings.Rendering=True
+MacTargetSettings.Splash=True
+MacTargetSettings.Icon=True
+MacTargetSettings.Audio=True
+LuminRuntimeSettings.Audio=True
+LuminRuntimeSettings.MPK Packaging=True
+LuminRuntimeSettings.Magic Leap App Tile=True
+LuminRuntimeSettings.Build=True
+LuminRuntimeSettings.Distribution Signing=True
+LuminRuntimeSettings.Runtime=True
+LuminRuntimeSettings.Advanced MPK Packaging=True
+LuminRuntimeSettings.AdvancedBuild=True
+MagicLeapSDKSettings.SDKConfig=True
+WindowsTargetSettings.Targeted RHIs=True
+WindowsTargetSettings.Toolchain=True
+WindowsTargetSettings.OS Info=True
+WindowsTargetSettings.Splash=True
+WindowsTargetSettings.Icon=True
+WindowsTargetSettings.Audio=True
+AvfMediaSettings.Debug=True
+ImgMediaSettings.General=True
+ImgMediaSettings.Caching=True
+ImgMediaSettings.EXR=True
+ImgMediaSettings.Proxies=True
+LevelSequenceEditorSettings.Tracks=True
+LevelSequenceEditorSettings.Playback=True
+MagicLeapSettings.General=True
+PaperRuntimeSettings.Experimental=True
+PaperRuntimeSettings.Settings=True
+TcpMessagingSettings.Transport=True
+UdpMessagingSettings.Transport=True
+UdpMessagingSettings.Tunnel=True
+WmfMediaSettings.Media=True
+WmfMediaSettings.Debug=True
+Tank_BP_C.Tick=True
+BP_Sky_Sphere_C.TransformCommon=True
+BP_Sky_Sphere_C.Default=True
+BP_Sky_Sphere_C.Override settings=True
+BP_Sky_Sphere_C.Rendering=True
+BP_Sky_Sphere_C.Replication=True
+BP_Sky_Sphere_C.Input=True
+BP_Sky_Sphere_C.Actor=True
+Blueprint.ClassOptions=True
+Blueprint.BlueprintOptions=True
+Blueprint.Interfaces=True
+Blueprint.Packaging=True
+Blueprint.Thumbnail=True
+
+[PlacementMode]
+RecentlyPlaced=/Game/ImprovedTank/Tank_BP.Tank_BP;
 
 
